Fixup build gradle